_sass/dark-theme-button.scss
.dark-theme-button {
  display: inline-flex;
  position: relative;
  float: right;
  align-items: center;
  justify-content: center;
  margin: 25px;
}
.checkbox {
  opacity: 0;
}

.label {
  width: 50px;
  height: 27px;
  background-color: #111;
  border-radius: 50px;
  align-items: center !important;
  justify-content: space-between !important;
  transform: translate(-50%, -20%);
  display: inline-flex !important;
  position: relative;

  font-size: 18px;
  padding: 5px;
  line-height: 3.22;
}

.ball {
  width: 23px;
  height: 23px;
  background-color: white;
  position: absolute;
  top: 2px;
  left: 2px;
  border-radius: 50%;
  transition: transform 0.2s linear;
  padding-left: 7.5px;
}

/*  target the elemenent after the label*/
.checkbox:checked + .label .ball {
  transform: translateX(24px);
}

.fa-moon {
  color: yellow;
}

.fa-sun {
  color: yellow;
}

@media only screen and (max-width: 1500px) {
  #toggle-container {
    top: 2vh;
    right: 2vw;
  }
}

@media only screen and (max-width: 1000px) {
  #toggle-container {
    top: 2vh;
    right: 2vw;
  }
}

@media only screen and (max-width: 768px) {
  #toggle-container {
    top: 25px;
    right: 20px;
  }
}

$body: #ffffff;
$body-dark: #313a44;
$card-bg: #ffffff;
$card-bg-dark: #1e2732;
$body-text: #000000;
$body-text-dark: #ffffff;
$heading-text: #ffffff;
$heading-text-dark: #ffffff;
$info-text: #404040;
$info-text-dark: #ffffff;
$p-text: #212529;
$p-text-dark: #ffffff;
$border: #d5dbe0;
$border-dark: #ffffff;

:root {
  --color-body: #{$body};
  --color-card: #{$card-bg};
  --color-body-text: #{$body-text};
  --color-heading-text: #{$heading-text};
  --color-info-text: #{$info-text};
  --color-p-text: #{$p-text};
  --color-border: #{$border};
}

.dark {
  --color-body: #{$body-dark};
  --color-card: #{$card-bg-dark};
  --color-body-text: #{$body-text-dark};
  --color-heading-text: #{$heading-text-dark};
  --color-info-text: #{$info-text-dark};
  --color-p-text: #{$p-text-dark};
  --color-border: #{$border-dark};
}

